[package]
name = "fstar-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-lsp = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.17.0", features = ["full"] }
anyhow = "1.0"
itertools = "0.11.0"
tracing = "0.1"
tracing-subscriber = "0.3.0"
